--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,65 +1,147 @@
-@font-face {
-  font-family: 'Privateer';
-  src: url('../fonts/privateerregular.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/privateerregular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/privateerregular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('../fonts/privateerregular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/privateerregular.svg#svgFontName') format('svg'); /* Legacy iOS */
+.anim-button{
+}
+.anim-button:hover,
+.anim-button:focus{
+
 }
 
-
-h1,h2,h3,h4,h5,h6{
-  font-family: Privateer, serif;
-  letter-spacing: 0.08em;
+a.draw {
+  background: none;
+  border: 0;
+  box-sizing: border-box;
+  margin: 1em;
+  padding: 1em 2em;
+  box-shadow: inset 0 0 0 2px #f45e61;
+  color: #f45e61;
+  font-size: inherit;
+  font-weight: 700;
+  position: relative;
+  vertical-align: middle;
+}
+a.draw::before, a.draw::after {
+  box-sizing: inherit;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-// FIND A BODYCOPY FONT FROM GOOGLE FONT
-p{
-  font-family: 'Raleway', serif;
-  font-weight: 400;
-  font-style: normal;
+.draw {
+  -webkit-transition: color 0.25s;
+  transition: color 0.25s;
 }
-.raleway-normal{
- font-family: 'Raleway', serif;
- font-weight: 400;
- font-style: normal; 
+.draw::before, .draw::after {
+  border: 2px solid transparent;
+  width: 0;
+  height: 0;
 }
-
-/*title*/
-
-.fa{
-  color: #00c200;
-  font-size: 100px;
+.draw::before {
+  top: 0;
+  left: 0;
 }
-.fa-balance-scale{
-  color: #666;
-  font-size: 200px;
+.draw::after {
+  bottom: 0;
+  right: 0;
 }
-
-.icons .icon-heart{
-	font-size: 2em;
-	color: #00c200;
+.draw:hover {
+  color: #60daaa;
 }
-/*nav*/
-#main-nav{
-	padding: 1.65em;
-    background: red;
-    display: inline-block;
-    /* text-align: center; */
-    list-style-type: none;
-    display: none;
+.draw:hover::before, .draw:hover::after {
+  width: 100%;
+  height: 100%;
 }
-
-#main-nav ul{
-	list-style-type: none;
-	padding-left: 0;
+.draw:hover::before {
+  border-top-color: #60daaa;
+  border-right-color: #60daaa;
+  -webkit-transition: width 0.25s ease-out, height 0.25s ease-out 0.25s;
+  transition: width 0.25s ease-out, height 0.25s ease-out 0.25s;
+}
+.draw:hover::after {
+  border-bottom-color: #60daaa;
+  border-left-color: #60daaa;
+  -webkit-transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s, height 0.25s ease-out 0.75s;
+  transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s, height 0.25s ease-out 0.75s;
 }
 
-#main-nav li{
-	display: inline-block;
+.trans-button{
+  background: blue;
+  text-decoration: none;
+  color: white;
+  padding: 1.25em .5em;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+}
+.trans-button:hover,
+.trans-button:focus{
+  animation: btn-transition .8s ease forwards; 
 }
 
-/*body*/
+// FOR NEXT CLASS, WE NEED TO BETTER HANDLE WHEN UNHOVERING
+// RIGHT NOW ITS TOO HARSH
 
-/*footer*/
 
+
+//keyframes for wobble-top from: 
+//https://github.com/IanLunn/Hover/blob/master/css/hover.css
+
+@-webkit-keyframes btn-transition {
+  16.65% {
+    -webkit-transform: skew(-12deg);
+    transform: skew(-12deg);
+  }
+  33.3% {
+    -webkit-transform: skew(10deg);
+    transform: skew(10deg);
+  }
+  49.95% {
+    -webkit-transform: skew(-6deg);
+    transform: skew(-6deg);
+    color: blue;
+  }
+  66.6% {
+    -webkit-transform: skew(4deg);
+    transform: skew(4deg);
+  }
+  83.25% {
+    -webkit-transform: skew(-2deg);
+    transform: skew(-2deg);
+  }
+  100% {
+    -webkit-transform: skew(0);
+    transform: skew(0);
+    color: pink;
+  }
+}
+@keyframes btn-transition {
+  16.65% {
+    -webkit-transform: skew(-12deg);
+    transform: skew(-12deg);
+  }
+  33.3% {
+    -webkit-transform: skew(10deg);
+    transform: skew(10deg);
+  }
+  49.95% {
+    -webkit-transform: skew(-6deg);
+    transform: skew(-6deg);
+    background: blue;
+  }
+  66.6% {
+    -webkit-transform: skew(4deg);
+    transform: skew(4deg);
+  }
+  83.25% {
+    -webkit-transform: skew(-2deg);
+    transform: skew(-2deg);
+  }
+  100% {
+    -webkit-transform: skew(0);
+    transform: skew(0);
+    background: pink;
+  }
+}
